--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,13 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "flask>=3.1.1",
+    "gunicorn>=23.0.0",
     "jsonpickle>=4.1.1",
     "psycopg2-binary>=2.9.10",
     "pytz>=2025.2",
+]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.12.9",
 ]
