--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -26,4 +26,5 @@ spec:
                 secretKeyRef:
                   name: {{ .Values.database.secret }}
                   key: DATABASE_URL
-
+            - name: TZ
+              value: "{{ .Values.timezone }}"
