--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "flask>=3.1.1",
     "gunicorn>=23.0.0",
     "jsonpickle>=4.1.1",
-    "psycopg2-binary>=2.9.10",
+    "psycopg[binary]>=3.2.9",
     "pytz>=2025.2",
 ]
 
